apps/backend/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
  namespace: game-point-club
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/floatingpoints/backend:v0.1.3 # {"$imagepolicy": "game-point-club:game-point-club-backend"}
          resources:
            requests:
              memory: '128Mi'
              cpu: '0.25'
            limits:
              memory: '256Mi'
              cpu: '0.5'
