apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: game-point-club
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  tls:
    - hosts:
        - headless.game-point.club
      secretName: backend-cert-tls
  rules:
    - host: headless.game-point.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 8055
